--- a/bib/selection.bib
+++ b/bib/selection.bib
@@ -89,3 +89,94 @@
       reportNumber   = "CAVENDISH-HEP-2010-06",
       SLACcitation   = "%%CITATION = ARXIV:1004.3404;%%",
 }
+
+@article{matrixmethod,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of the top quark-pair production cross
+                        section with ATLAS in pp collisions at $\sqrt{s}=7$ TeV}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1577",
+      doi            = "10.1140/epjc/s10052-011-1577-6",
+      year           = "2011",
+      eprint         = "1012.1792",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2010-064",
+      SLACcitation   = "%%CITATION = ARXIV:1012.1792;%%",
+}
+
+@article{lumiunc,
+      author         = "Aad, Georges and others",
+      title          = "{Improved luminosity determination in $pp$ collisions at
+                        $\sqrt{s}$ = 7 TeV using the ATLAS detector at the LHC}",
+      collaboration  = "ATLAS",
+      journal        = "Eur.Phys.J.",
+      volume         = "C73",
+      pages          = "2518",
+      doi            = "10.1140/epjc/s10052-013-2518-3",
+      year           = "2013",
+      eprint         = "1302.4393",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-026",
+      SLACcitation   = "%%CITATION = ARXIV:1302.4393;%%",
+}
+
+@article{jes,
+      author         = "Aad, Georges and others",
+      title          = "{Jet energy measurement and its systematic uncertainty in
+                        proton-proton collisions at $\sqrt{s}=7$ TeV with the
+                        ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      year           = "2014",
+      eprint         = "1406.0076",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-222",
+      SLACcitation   = "%%CITATION = ARXIV:1406.0076;%%",
+}
+
+@techreport{IFAEBtagNote,
+      author        = "Bosman, M and Fiorini, L and Helsens, C and Juste, A and
+                       Mir, Ll and Nadal, J and Vorwerk, V",
+      title         = "{Weighting method to propagate heavy-flavor tagging
+                       calibrations and related uncertainties}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2010-331",
+      month         = "Jun",
+      year          = "2010",
+}
+
+@techreport{berends,
+      author        = "Acharya, B and Arguin, J-F and Barisonzi, M and Besana, IM
+                       and Bosman, M and Brock, IC and Calkins, R and Charkaborty,
+                       D and Cobal, M and Cristinziani, M and Ferrando, J and
+                       Fiorini, L and Henrichs, A and Heinemann, B and Helsens, C
+                       and Khoriauli, G and Kuhl, T and Juste, A and Lari, T and
+                       Meloni, F and Mir, L and Nadal, J and Nuncio-Quiroz, E and
+                       Pinamonti, M and Radics, B and de Sanctis, U and Shabalina,
+                       E and Shan, L-Y and Suruliz, K and Ta, DB and Troncon, C
+                       and Vorwerk, V",
+      title         = "{Estimation of the W+Jets Background for Top Quark
+                       Re-Discovery in the Single Lepton+Jets Channel}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2010-834",
+      month         = "Oct",
+      year          = "2010",
+      note          = "Supporting document for top paper",
+}
+
+@article{pdf4lhc,
+      author         = "Botje, Michiel and Butterworth, Jon and Cooper-Sarkar,
+                        Amanda and de Roeck, Albert and Feltesse, Joel and others",
+      title          = "{The PDF4LHC Working Group Interim Recommendations}",
+      year           = "2011",
+      eprint         = "1101.0538",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1101.0538;%%",
+}
