--- a/tex/selection_tables.tex
+++ b/tex/selection_tables.tex
@@ -1,10 +1,4 @@
 \begin{table}
-  \caption[Event yields for the samples at $\sqrt{s} = 7 \TeV{}$]{
-    Numbers of expected events for the \ttbar{} signal and the various background 
-    processes and observed events in data for the dataset 
-    at $\sqrt{s} = 7 \TeV{}$.
-    The uncertainties include statistical and systematic components.}
-  \label{tab:yields2011}
   \centering
   \begin{tabular}{ l  rrr  rrr  rrr  rrr }
     \toprule
@@ -21,26 +15,26 @@
     Observed                & \multicolumn{3}{c}{70845}  & \multicolumn{3}{c}{37568} & \multicolumn{3}{c}{40972}      & \multicolumn{3}{c}{21929} \\
     \bottomrule
   \end{tabular}
+  \caption[Event yields for the samples at $\sqrt{s} = 7 \TeV{}$]{
+    Numbers of expected events for the \ttbar{} signal and the various background 
+    processes and observed events in data for the dataset 
+    at $\sqrt{s} = 7 \TeV{}$.
+    The uncertainties include statistical and systematic components.}
+  \label{tab:yields2011}
 \end{table}
 
 
 \begin{table}
-  \caption[Event yields for the \mujets{} samples at $\sqrt{s} = 8 \TeV{}$]{
-    Numbers of expected events for the \ttbar{} signal and the various background 
-    processes and observed events in data for the \mujets{} dataset
-    at $\sqrt{s} = 8 \TeV{}$.
-    The uncertainties include statistical and systematic components.[TO BE UPDATED]}
-  \label{tab:yields2012mu}
   \begin{tabular}{ l  rrr  rrr  rrr  rrr }
     \toprule
     Channel & \multicolumn{3}{c}{\mujets{} pretag} & \multicolumn{3}{c}{\mujets{} 0-tag} & \multicolumn{3}{c}{\mujets{} 1-tag} & \multicolumn{3}{c}{\mujets{} 2-tag} \\
     \midrule      
     $t\bar{t}$       & 197000 &$\!\!\!\pm\!\!\!$& 400  & 28480 &$\!\!\!\pm\!\!\!$& 170  & 88230 &$\!\!\!\pm\!\!\!$& 300  & 93810 &$\!\!\!\pm\!\!\!$& 310  \\
     Single top       & 16100  &$\!\!\!\pm\!\!\!$& 130  & 3260  &$\!\!\!\pm\!\!\!$& 60  & 8070  &$\!\!\!\pm\!\!\!$& 90  & 5560  &$\!\!\!\pm\!\!\!$& 70   \\ 
-    $W$+jets (data)  & 171700 &$\!\!\!\pm\!\!\!$& 400 & 147800  &$\!\!\!\pm\!\!\!$& 400  & 21150 &$\!\!\!\pm\!\!\!$& 150  & 3310 &$\!\!\!\pm\!\!\!$& 60  \\
+    $W$+jets  & 171700 &$\!\!\!\pm\!\!\!$& 400 & 147800  &$\!\!\!\pm\!\!\!$& 400  & 21150 &$\!\!\!\pm\!\!\!$& 150  & 3310 &$\!\!\!\pm\!\!\!$& 60  \\
     $Z$+jets         & 17820  &$\!\!\!\pm\!\!\!$& 130  & 15270   &$\!\!\!\pm\!\!\!$& 120  & 2160  &$\!\!\!\pm\!\!\!$& 50  & 623   &$\!\!\!\pm\!\!\!$& 25   \\
     Diboson          & 6140   &$\!\!\!\pm\!\!\!$& 80   & 5220  &$\!\!\!\pm\!\!\!$& 70 & 855 &$\!\!\!\pm\!\!\!$& 29 & 90  &$\!\!\!\pm\!\!\!$& 10 \\ 
-    QCD (data)       & 15600  &$\!\!\!\pm\!\!\!$& 120  & 9030  &$\!\!\!\pm\!\!\!$& 100  & 4930  &$\!\!\!\pm\!\!\!$& 70  & 2590   &$\!\!\!\pm\!\!\!$& 50  \\ 
+    QCD       & 15600  &$\!\!\!\pm\!\!\!$& 120  & 9030  &$\!\!\!\pm\!\!\!$& 100  & 4930  &$\!\!\!\pm\!\!\!$& 70  & 2590   &$\!\!\!\pm\!\!\!$& 50  \\ 
     \midrule
     Total background & 227400 &$\!\!\!\pm\!\!\!$& 500 & 180500  &$\!\!\!\pm\!\!\!$& 400  & 37170 &$\!\!\!\pm\!\!\!$& 200 & 12170  &$\!\!\!\pm\!\!\!$& 110  \\ 
     \midrule
@@ -49,25 +43,25 @@
     Observed         & \multicolumn{3}{c}{427138}     & \multicolumn{3}{c}{207057}     & \multicolumn{3}{c}{126105}     & \multicolumn{3}{c}{111248}     \\ 
     \bottomrule
   \end{tabular}
+  \caption[Event yields for the \mujets{} samples at $\sqrt{s} = 8 \TeV{}$]{
+    Numbers of expected events for the \ttbar{} signal and the various background 
+    processes and observed events in data for the \mujets{} dataset
+    at $\sqrt{s} = 8 \TeV{}$.
+    The uncertainties include statistical and systematic components.}
+  \label{tab:yields2012mu}
 \end{table}
 
 \begin{table}
-  \caption[Event yields for the \ejets{} samples at $\sqrt{s} = 8 \TeV{}$]{
-    Numbers of expected events for the \ttbar{} signal and the various background 
-    processes and observed events in data for the \ejets{} dataset
-    at $\sqrt{s} = 8 \TeV{}$.
-    The uncertainties include statistical and systematic components.[TO BE UPDATED]}
-  \label{tab:yields2012ele}
   \begin{tabular}{ l  rrr  rrr  rrr  rrr }
     \toprule
     Channel & \multicolumn{3}{c}{\ejets{} pretag} & \multicolumn{3}{c}{\ejets{} 0-tag} & \multicolumn{3}{c}{\ejets{} 1-tag} & \multicolumn{3}{c}{\ejets{} 2-tag} \\
     \midrule
     $t\bar{t}$       & 159800 &$\!\!\!\pm\!\!\!$& 400  & 23040 &$\!\!\!\pm\!\!\!$& 150  & 71440 &$\!\!\!\pm\!\!\!$& 270  & 77120 &$\!\!\!\pm\!\!\!$& 280  \\
     Single top       & 13190  &$\!\!\!\pm\!\!\!$& 110  & 2670  &$\!\!\!\pm\!\!\!$& 50  & 6590  &$\!\!\!\pm\!\!\!$& 80  & 4660  &$\!\!\!\pm\!\!\!$& 70   \\
-    $W$+jets (data)  & 126900 &$\!\!\!\pm\!\!\!$& 400 & 109150  &$\!\!\!\pm\!\!\!$& 330  & 15720 &$\!\!\!\pm\!\!\!$& 130  & 2450  &$\!\!\!\pm\!\!\!$& 50  \\
+    $W$+jets  & 126900 &$\!\!\!\pm\!\!\!$& 400 & 109150  &$\!\!\!\pm\!\!\!$& 330  & 15720 &$\!\!\!\pm\!\!\!$& 130  & 2450  &$\!\!\!\pm\!\!\!$& 50  \\
     $Z$+jets         & 32710  &$\!\!\!\pm\!\!\!$& 180  & 28400   &$\!\!\!\pm\!\!\!$& 170   & 3690  &$\!\!\!\pm\!\!\!$& 60  & 1178   &$\!\!\!\pm\!\!\!$& 34   \\
     Diboson          & 5420  &$\!\!\!\pm\!\!\!$& 70   & 4590  &$\!\!\!\pm\!\!\!$& 70 & 765 &$\!\!\!\pm\!\!\!$& 28 & 100  &$\!\!\!\pm\!\!\!$& 10 \\
-    QCD (data)       & 24970  &$\!\!\!\pm\!\!\!$& 160  & 18540  &$\!\!\!\pm\!\!\!$& 140  & 6020  &$\!\!\!\pm\!\!\!$& 80  & 1560   &$\!\!\!\pm\!\!\!$& 40  \\
+    QCD       & 24970  &$\!\!\!\pm\!\!\!$& 160  & 18540  &$\!\!\!\pm\!\!\!$& 140  & 6020  &$\!\!\!\pm\!\!\!$& 80  & 1560   &$\!\!\!\pm\!\!\!$& 40  \\
     \midrule
     Total background & 203200 &$\!\!\!\pm\!\!\!$& 500 & 163300  &$\!\!\!\pm\!\!\!$& 400  & 32780 &$\!\!\!\pm\!\!\!$& 180 & 9950  &$\!\!\!\pm\!\!\!$& 100  \\
     \midrule
@@ -76,4 +70,10 @@
     Observed         & \multicolumn{3}{c}{354865}     & \multicolumn{3}{c}{181295}     & \multicolumn{3}{c}{99236}     & \multicolumn{3}{c}{89462}     \\
     \bottomrule
   \end{tabular}
+  \caption[Event yields for the \ejets{} samples at $\sqrt{s} = 8 \TeV{}$]{
+    Numbers of expected events for the \ttbar{} signal and the various background 
+    processes and observed events in data for the \ejets{} dataset
+    at $\sqrt{s} = 8 \TeV{}$.
+    The uncertainties include statistical and systematic components.}
+  \label{tab:yields2012ele}
 \end{table}
